--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -13,6 +13,7 @@ es:
         price_for_car: "Precio Montaje para Automoviles"
         price_for_moto: "Precio Montaje para Motos"
         submit: "Enviar"
+        town: "Poblacion"
     workshop:
       notices:
         success: "Se ha registrado el Taller Satisfactoriamente."
