New Workshop search

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -2,6 +2,7 @@ es:
   spree:
     workshops:
       workshop: "Alta Taller"
+      search: "Buscar Taller"
       form:
         name: "Nombre"
         address: "Direccion"
